src/css/styles.css
body, html {
  background-color: #d7e0e0;
  height: 100%;
  font-family: sans-serif;
};

section {
  background-color: #FFF;
  border-radius: 15px;
};

h1 {
  font-size: 36px;
  margin: 0;
  padding-top: 20px;
};

h2 {
  font-size: 32px;
}

h3 {
  font-size: 24px;
  margin: 5px;
}

h4 {
  font-size: 20px;
}

p {
  font-size: 18px;
}

table {
  background-color: #ebf2f2;
  border-spacing: 0;
  border-radius: 15px;
}

td {
  text-align: center;
}

main {
  display: flex;
}

.activity-box {
  background-color: #ff9f1c;
  color: #6d3c0b;
  height: 350px;
  width: 380px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.daily-water {
  background-color: #0fd3b2;
  color: #096d5c;
  border-radius: 15px;
  width: 250px;
  height: 250px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.daily-sleep {
  background-color: #9f5edd;
  color: #3c096c;
  border-radius: 15px;
  width: 400px;
  height: 250px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.weekly-water {
  color: #096d5c;
  width: 300px;
  height: 300px;
}

.weekly-sleep {
  color: #3c096c;
  width: 450px;
  height: 300px;
}

.sleep-table-heading {
  background-color: #9f5edd;
}
.water-table-heading {
  background-color: #0fd3b2;
}

.stats-container {
  width: 1200px;
  height: 740px;
  padding-left: 40px;
}

.user-info-left {
  width: 500px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.user-card {
  width: 380px;
  height: 380px;
}

.daily-stats {
  display: flex;
}

.weekly-stats {
  display: flex;
}

.address-line1 {
  margin-bottom: 0;
}

.address-line2 {
  margin-top: 0;
}

.stats-number-lg {
  font-size: 90px;
  margin: 5px;
}

.daily-sleep-stats {
  display: flex;
}

.icon {
  width: 40px;
  height: 40px;
}

.dashboard-subhead {
  font-size: 20px;
}

.daily-sleep-column {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.text-under-number {
  margin: 0;
}

